WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271517
[GStreamer][WebRTC] Crash when setting video encoder bitrate per gccbwe request
https://bugs.webkit.org/show_bug.cgi?id=271517
Summary
[GStreamer][WebRTC] Crash when setting video encoder bitrate per gccbwe request
Philippe Normand
Reported
2024-03-23 04:46:05 PDT
webrtc/video-stats.html and webrtc/video-h264.html are crashing: gdb) bt #0 _g_log_abort (breakpoint=<optimized out>) at ../glib/gmessages.c:426 #1 g_logv (log_domain=0x7f0a8f993030 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7f0994bf73b0) at ../glib/gmessages.c:1273 #2 0x00007f0a8f866193 in g_log (log_domain=log_domain@entry=0x7f0a8f993030 "GLib-GObject", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f0a8f999230 "%s: object class '%s' has no property named '%s'") at ../glib/gmessages.c:1315 #3 0x00007f0a8f97642d in g_object_set_is_valid_property (property_name=<optimized out>, pspec=0x0, object=<optimized out>) at ../gobject/gobject.c:2649 #4 g_object_set_valist (var_args=0x7f0994bf7560, first_property_name=<optimized out>, object=<optimized out>) at ../gobject/gobject.c:2758 #5 g_object_set_valist (object=<optimized out>, first_property_name=<optimized out>, var_args=0x7f0994bf7560) at ../gobject/gobject.c:2731 #6 0x00007f0a8f97675b in g_object_set (_object=0x1ca8290, first_property_name=0x7f0a95e8c068 <.L.str.16> "target-bitrate") at ../gobject/gobject.c:294 ...
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-03-23 05:29:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26370
EWS
Comment 2
2024-03-26 08:08:29 PDT
Committed
276688@main
(635fa170762b): <
https://commits.webkit.org/276688@main
> Reviewed commits have been landed. Closing PR #26370 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-26 08:09:33 PDT
<
rdar://problem/125417399
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug