[GStreamer][WebRTC] Crash when setting video encoder bitrate per gccbwe request https://bugs.webkit.org/show_bug.cgi?id=271517

Reviewed by Adrian Perez de Castro.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.h: Disable the
ssrc-audio-level RTP extension.
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(videoEncoderConstructed): Fix typo, our encoder bitrate property is not named target-property.

Canonical link: https://commits.webkit.org/276688@main